objects/box__Box__x/box__Box__x.object-meta.xml
<CustomObject>
    <externalDataSource>box__Box</externalDataSource>
    <externalName>Box</externalName>
    <label>Box</label>
    <pluralLabel>Box</pluralLabel>
</CustomObject>