objects/box__Box__x/fields/box__Date__c.field-meta.xml
<CustomField>
    <fullName>box__Date__c</fullName>
    <externalDeveloperName>Date</externalDeveloperName>
    <label>Date</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>DateTime</type>
</CustomField>