objects/box__Box__x/fields/box__Summary__c.field-meta.xml
<CustomField>
    <fullName>box__Summary__c</fullName>
    <externalDeveloperName>Summary</externalDeveloperName>
    <label>Summary</label>
    <length>500</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>