objects/box__Box__x/fields/box__Title__c.field-meta.xml
<CustomField>
    <fullName>box__Title__c</fullName>
    <externalDeveloperName>Title</externalDeveloperName>
    <label>Title</label>
    <length>255</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Text</type>
</CustomField>